Fix logo SVG alignment and thus the site label display next to it

--- a/sources/css/tyrian/less/header.less
+++ b/sources/css/tyrian/less/header.less
@@ -44,9 +44,11 @@
 
 .site-logo {
   display: inline-block;
+  min-height: 63px;
 
   object {
     pointer-events: none;
+    vertical-align: middle;
   }
 }
 
